--- a/src/CSS/table.css
+++ b/src/CSS/table.css
@@ -1,61 +1,77 @@
 
 .container{
-    margin-top: 10px;
-    height: 100%;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .dialog{
-    text-shadow: none;
-  }
-  
-  .my-phone-input .flag-dropdown {
-    display: none;
+  margin-top: 10px;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.dialog{
+  text-shadow: none;
+}
+
+.my-phone-input .flag-dropdown {
+  display: none;
+}
+
+.shine-button {
+  text-decoration: none;
+  display: inline-block;
+  padding: 2px 15px;
+  margin: 2px 10px;
+  position: relative;
+  overflow: hidden;
+  border: 2px solid rgb(0, 128, 255);
+  border-radius: 8px;
+  font-family: Comic Sans MS;
+  text-align: left;
+  font-size: 10px;
+  color: black;
+  transition: .2s ease-in-out;
+}
+
+.info_pages_body {
+  text-align: center;
+  word-spacing: 10px;
+  background-size: cover;
   }
 
-  .info_pages_body {
-    text-align: center;
-    word-spacing: 10px;
-    background-size: cover;
+
+.shine-button:before {
+  content: "";
+  background: linear-gradient(90deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .5));
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: -8px;
+  left: -75px;
+  transform: skewX(-45deg);
+}
+
+.shine-button:hover {
+  background: rgb(66,170,255);
+  color: #fff;
+}
+
+.shine-button:hover:before {
+  left: 250px;
+  transition: .5s ease-in-out;
+}
+
+@media only screen and (min-width: 768px) {
+  .EmployeeTable {
+    flex-direction: row;
   }
-  
-  .shine-button:before {
-    content: "";
-    background: linear-gradient(90deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .5));
-    height: 50px;
-    width: 50px;
-    position: absolute;
-    top: -8px;
-    left: -75px;
-    transform: skewX(-45deg);
+}
+
+@media only screen and (max-width: 500px) {
+  .EmployeeTable {
+    flex-direction: column;
   }
-  
-  .shine-button:hover {
-    background: rgb(66,170,255);
-    color: #fff;
+
+  .AddEmployee {
+    width: 100%;
   }
-  
-  .shine-button:hover:before {
-    left: 250px;
-    transition: .5s ease-in-out;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    .EmployeeTable {
-      flex-direction: row;
-    }
-  }
-  
-  @media only screen and (max-width: 500px) {
-    .EmployeeTable {
-      flex-direction: column;
-    }
-  
-    .AddEmployee {
-      width: 100%;
-    }
-  }
-  
-  
+}
+
